fix dark mode style

--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,7 @@ body {
   top: 0;
   width: 100%;
   line-height: 4rem;
+  border-bottom: solid 2px hsla(0, 0%, 13%, 0.1);
 }
 
 a {
@@ -94,7 +95,7 @@ a:link {
   height: calc(100vh - 5rem);
   margin-top: 4rem;
   padding: 1rem 0;
-  box-shadow: inset 0 0 .5rem 0 #0003;
+  /* box-shadow: inset 0 0 .5rem 0 #0003; */
 }
 
 .tag {
@@ -152,6 +153,7 @@ a:link {
 
   .header {
     background-color: #222;
+    border-bottom: solid 2px hsla(0, 0%, 87%, 0.2);
   }
 
   .search {
